<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- TextView -->
    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="24sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="#E3E3E3"
        android:hint="@string/textview_result_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TableLayout with buttons -->
    <TableLayout
        android:id="@+id/button_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 1st row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Clear button -->
            <Button
                android:id="@+id/button_key_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_key_01" />
        </TableRow>

        <!-- 2nd row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Number button 7 -->
            <Button
                android:id="@+id/button_key_07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_07"
                app:layout_constraintStart_toEndOf="@+id/button_key_clear"
                app:layout_constraintEnd_toStartOf="@+id/button_key_08" />

            <!-- Number button 8 -->
            <Button
                android:id="@+id/button_key_08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_08"
                app:layout_constraintStart_toEndOf="@+id/button_key_07"
                app:layout_constraintEnd_toStartOf="@+id/button_key_09" />

            <!-- Number button 9 -->
            <Button
                android:id="@+id/button_key_09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_09"
                app:layout_constraintStart_toEndOf="@+id/button_key_08"
                app:layout_constraintEnd_toStartOf="@+id/button_key_divide" />

            <!-- Division button -->
            <Button
                android:id="@+id/button_key_divide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_divide"
                app:layout_constraintStart_toEndOf="@+id/button_key_09"
                app:layout_constraintEnd_toEndOf="parent" />
        </TableRow>

        <!-- 3rd row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Number button 4 -->
            <Button
                android:id="@+id/button_key_04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_key_05" />

            <!-- Number button 5 -->
            <Button
                android:id="@+id/button_key_05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_05"
                app:layout_constraintStart_toEndOf="@+id/button_key_04"
                app:layout_constraintEnd_toStartOf="@+id/button_key_06" />

            <!-- Number button 6 -->
            <Button
                android:id="@+id/button_key_06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_06"
                app:layout_constraintStart_toEndOf="@+id/button_key_05"
                app:layout_constraintEnd_toStartOf="@+id/button_key_x" />

            <!-- Multiplication button -->
            <Button
                android:id="@+id/button_key_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_multiplication"
                app:layout_constraintStart_toEndOf="@+id/button_key_06"
                app:layout_constraintEnd_toEndOf="parent" />
        </TableRow>

        <!-- 4th row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Number button 1 -->
            <Button
                android:id="@+id/button_key_01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_key_02" />

            <!-- Number button 2 -->
            <Button
                android:id="@+id/button_key_02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_02"
                app:layout_constraintStart_toEndOf="@+id/button_key_01"
                app:layout_constraintEnd_toStartOf="@+id/button_key_03" />

            <!-- Number button 3 -->
            <Button
                android:id="@+id/button_key_03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_03"
                app:layout_constraintStart_toEndOf="@+id/button_key_02"
                app:layout_constraintEnd_toStartOf="@+id/button_key_minus" />

            <!-- Subtraction button -->
            <Button
                android:id="@+id/button_key_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_subtraction"
                app:layout_constraintStart_toEndOf="@+id/button_key_03"
                app:layout_constraintEnd_toEndOf="parent" />
        </TableRow>

        <!-- 5th row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Number button 0 -->
            <Button
                android:id="@+id/button_key_00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_key_plus" />

            <!-- Addition button -->
            <Button
                android:id="@+id/button_key_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_addition"
                app:layout_constraintStart_toEndOf="@+id/button_key_00"
                app:layout_constraintEnd_toStartOf="@+id/button_key_equal" />

            <!-- Equal button -->
            <Button
                android:id="@+id/button_key_equal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_equal"
                app:layout_constraintStart_toEndOf="@+id/button_key_plus"
                app:layout_constraintEnd_toEndOf="parent" />
        </TableRow>
    </TableLayout>

    <!-- FragmentContainerView for NavHostFragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/button_table_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navGraph="@navigation/nav_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>
